@@ -246,20 +246,24 @@ public abstract class QueryNodeImpl implements QueryNode, Cloneable {
   public Map<String, Object> getTagMap() {
     return (Map<String, Object>) this.tags.clone();
   }
-  
+
+  @Override
+  public void removeChildren(QueryNode childNode){
+    Iterator<QueryNode> it = this.clauses.iterator();
+    while(it.hasNext()){
+      if(it.next() == childNode){
+        it.remove();
+      }
+    }
+    childNode.removeFromParent();
+  }
+
   @Override
   public void removeFromParent() {
     if (this.parent != null) {
-      List<QueryNode> parentChildren = this.parent.getChildren();
-      Iterator<QueryNode> it = parentChildren.iterator();
-      
-      while (it.hasNext()) {
-        if (it.next() == this) {
-          it.remove();
-        }
-      }
-      
+      QueryNode parent = this.parent;
       this.parent = null;
+      parent.removeChildren(this);
     }
   }
 
